crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__string_variable.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 110
expression: "parse(\"local y = \\\"hello\\\"\")"
---
{
  "body": [
    {
      "Let": {
        "name": "y",
        "init": {
          "Literal": {
            "String": "hello"
          }
        },
        "mutable": true
      }
    }
  ]
}
