crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__table_record.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 162
expression: "parse(\"local obj = {x = 1, y = 2}\")"
---
{
  "body": [
    {
      "Let": {
        "name": "obj",
        "init": {
          "Object": [
            [
              "x",
              {
                "Literal": {
                  "Number": 1.0
                }
              }
            ],
            [
              "y",
              {
                "Literal": {
                  "Number": 2.0
                }
              }
            ]
          ]
        },
        "mutable": true
      }
    }
  ]
}
