crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__varargs_function.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"function foo(...) return ... end\")"
---
{
  "body": [
    {
      "Function": {
        "name": "foo",
        "params": [
          {
            "name": "..."
          }
        ],
        "body": [
          {
            "Return": {
              "Ident": "..."
            }
          }
        ]
      }
    }
  ]
}
